<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="edit_message">Total Bill</string>
    <string name="edit_message2">Tip %</string>
    <string name="edit_message3">1 </string>

    <string name="radioButton_text">Round total bill to Nearest Dollar</string>
    <string name="radioButton_text2">Round tip to Nearest Dollar</string>
    <string name="radioButton_text3">Do not round</string>

    <string name="button_get_total">Get Total</string>
</resources>
